<resources>
    <string name="app_name">To Do List</string>
    <string name="reminder">Reminder</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="note">Note</string>
    <string name="repeat">Repeat</string>
    <string name="addANote">Note…</string>
    <string name="subtask">Subtask</string>
    <string name="addSubtask">Add a subtask</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="menu">Menu</string>
    <string name="more">More functions</string>
    <string name="addReminder">New reminder</string>
    <string name="filter">Sort by</string>
    <string name="deleteAll">Clear all</string>
    <string name="clear">Clear</string>
    <string name="selectDate">Select date</string>
    <string name="selectTime">Select time</string>
    <string name="deleted">Deleted</string>
    <string name="completed">Completed</string>
    <string name="dateTime">Date &amp; Time</string>
    <string name="priorityLevel">Priority level</string>
    <string name="updated">Updated</string>
    <string name="newCategory">New category</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="showDaysList">Show days list</string>
    <string name="shareApp">Share app</string>
    <string name="rateUs">Rate us</string>
    <string name="sortByNearest">Sort by nearest</string>
    <string name="sortByPriority">Sort by priority</string>
    <string name="highPriority">highest level</string>
    <string name="lowPriority">lowest level</string>
    <string name="sortByAlphabet">Sort by alphabet</string>
    <string name="sortByTime">Sort by time</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="logIn">Log in</string>
    <string name="categoriesSettings">Manage categories</string>

    <string name="defaultCategory">Default</string>
    <string name="workCategory">Work</string>
    <string name="homeCategory">Home</string>
    <string name="healthCategory">Health</string>

    <!--Repeat-->
    <string name="custom">Custom</string>
    <string name="never">Never</string>
    <string name="everyday">Everyday</string>
    <string name="everyTwoDays">Every 2 days</string>
    <string name="everyThreeDays">Every 3 days</string>
    <string name="everyFourDays">Every 4 days</string>
    <string name="everyFiveDays">Every 5 days</string>
    <string name="everySixDays">Every 6 days</string>
    <string name="everyWeek">Every week</string>
    <string name="everyMonth">Every month</string>
    <string name="everyHalfYear">Every half year</string>
    <string name="everyYear">Every year</string>


    <!--Days of week-->
    <string name="Sun">Sunday</string>
    <string name="Mon">Monday</string>
    <string name="Tue">Tuesday</string>
    <string name="Wed"> Wednesday</string>
    <string name="Thu">Thursday</string>
    <string name="Fri">Friday</string>
    <string name="Sat">Saturday</string>

    <!--Months-->
    <string name="Jan">January</string>
    <string name="Feb"> February</string>
    <string name="Mar">March</string>
    <string name="Apr">April</string>
    <string name="May">May</string>
    <string name="Jun">June</string>
    <string name="Jul">July</string>
    <string name="Aug">August</string>
    <string name="Sep">September</string>
    <string name="Oct">October</string>
    <string name="Nov">November</string>
    <string name="Dec">December</string>

    <!--Priority levels-->
    <string name="defaultLevel">Default level</string>
    <string name="level1">Level 1</string>
    <string name="level2">level 2</string>
    <string name="level3">level 3</string>


</resources>