<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/never" android:title="@string/never"/>
    <item android:id="@+id/everyDay" android:title="@string/everyday"/>
    <item android:id="@+id/everyWeek" android:title="@string/everyWeek"/>
    <item android:id="@+id/everyMonth" android:title="@string/everyMonth"/>
    <item android:id="@+id/everyYear" android:title="@string/everyYear"/>

    <item android:id="@+id/custom" android:title="@string/custom">
        <menu >
            <item android:id="@+id/every2Days" android:title="@string/everyTwoDays"/>
            <item android:id="@+id/every3Days" android:title="@string/everyThreeDays"/>
            <item android:id="@+id/every4Days" android:title="@string/everyFourDays"/>
            <item android:id="@+id/every5Days" android:title="@string/everyFiveDays"/>
            <item android:id="@+id/every6Days" android:title="@string/everySixDays"/>
            <item android:id="@+id/everyHalfYear" android:title="@string/everyHalfYear"/>
        </menu>
    </item>
</menu>