<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/show"
        android:icon="@drawable/ic_arrow_down"
        android:title="@string/showDaysList"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/nearest" android:title="@string/sortByNearest"/>
            <item android:id="@+id/priority" android:title="@string/sortByPriority">
                <menu>
                    <item android:id="@+id/highPriority" android:title="@string/highPriority"/>
                    <item android:id="@+id/lowPriority" android:title="@string/lowPriority"/>
                </menu>
            </item>
            <item android:id="@+id/alphabet" android:title="@string/sortByAlphabet"/>
            <item android:id="@+id/time" android:title="@string/sortByTime">
                <menu>
                    <item android:id="@+id/newest" android:title="@string/newest"/>
                    <item android:id="@+id/oldest" android:title="@string/oldest"/>
                </menu>
            </item>
        </menu>
    </item>

</menu>