<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"

android:layout_width="match_parent"
android:layout_height="match_parent">

<androidx.constraintlayout.widget.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="8dp" />

<androidx.constraintlayout.widget.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="16dp" />

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/curtain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/main_color_dark"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <ImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:src="@drawable/ic_close"
        app:tint="@color/white"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:inputType="text"
        android:backgroundTint="@color/main_color_dark"
        android:text="title"
        android:textColor="@color/white"
        android:textSize="30sp"

        app:layout_constraintStart_toEndOf="@id/close"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="@id/close"
        app:layout_constraintBottom_toBottomOf="@id/close"/>

    <ImageView
        android:id="@+id/editable"
        android:layout_width="16dp"
        android:layout_height="16dp"

        android:src="@drawable/ic_edit"
        app:tint="@color/white"

        app:layout_constraintTop_toTopOf="@id/title"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/title"/>

    <ImageView
        android:id="@+id/save"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:src="@drawable/ic_done"
        app:tint="@color/white"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/reminderInfoBlock"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"

    android:background="@drawable/info_block_background"

    android:padding="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginEnd="8dp"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="8dp"
    app:layout_constraintTop_toBottomOf="@id/curtain"
    android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/categoriesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categories"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="6dp"


        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"

        app:boxStrokeColor="@color/buttons_color"
        app:boxStrokeWidth="2dp"
        app:endIconTint="@color/grey"

        app:layout_constraintBottom_toBottomOf="@id/categoriesTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@+id/openDatePicker"
        app:layout_constraintTop_toTopOf="@id/categoriesTitle">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:inputType="none"
            android:text="@string/defaultCategory" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/text_color"
        app:layout_constraintEnd_toEndOf="@id/categories"
        app:layout_constraintStart_toStartOf="@id/categoriesTitle"
        app:layout_constraintTop_toBottomOf="@id/categories" />

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/openDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"

        android:backgroundTint="@color/buttons_color"
        android:text="09.09.2021"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_drop_down"
        app:iconTint="@color/white"

        app:layout_constraintBottom_toBottomOf="@+id/dateTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/dateTitle" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/text_color"
        app:layout_constraintEnd_toEndOf="@id/openDatePicker"
        app:layout_constraintStart_toStartOf="@id/dateTitle"
        app:layout_constraintTop_toBottomOf="@id/openDatePicker" />

    <TextView
        android:id="@+id/timeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/openTimePicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/buttons_color"
        android:elevation="6dp"
        android:text="20:28"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_drop_down"
        app:iconTint="@color/white"

        app:layout_constraintBottom_toBottomOf="@+id/timeTitle"
        app:layout_constraintTop_toTopOf="@id/timeTitle"
        app:layout_constraintEnd_toEndOf="@+id/openDatePicker"
        app:layout_constraintStart_toStartOf="@+id/openDatePicker" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/text_color"
        app:layout_constraintEnd_toEndOf="@id/openTimePicker"
        app:layout_constraintStart_toStartOf="@id/timeTitle"
        app:layout_constraintTop_toBottomOf="@id/openTimePicker" />

    <TextView
        android:id="@+id/repeatTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/repeat"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/whenRepeat"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="6dp"

        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"

        app:boxStrokeColor="@color/buttons_color"
        app:boxStrokeWidth="2dp"
        app:endIconTint="@color/grey"

        app:layout_constraintBottom_toBottomOf="@id/repeatTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/openDatePicker"
        app:layout_constraintTop_toTopOf="@id/repeatTitle">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteRepeat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:inputType="none"
            android:text="@string/never" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/addNoteLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:elevation="4dp"

    app:startIconDrawable="@drawable/ic_note"
    app:endIconMode="clear_text"
    app:endIconContentDescription="@string/clear"
    android:hint="@string/note"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    app:hintTextColor="@color/main_color_dark"
    app:boxStrokeWidth="2dp"
    app:boxStrokeColor="@color/main_color_dark"

    app:startIconTint="@color/main_color"
    android:textColorHint="@color/main_color_dark"

    app:boxCornerRadiusBottomStart="10dp"
    app:boxCornerRadiusBottomEnd="10dp"
    app:boxCornerRadiusTopStart="10dp"
    app:boxCornerRadiusTopEnd="10dp"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/reminderInfoBlock"
    android:layout_margin="8dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:inputType="textAutoComplete"
        android:textCursorDrawable="@drawable/cursor_drawable"/>

</com.google.android.material.textfield.TextInputLayout>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/subtasksRecyclerView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:elevation="2dp"

    android:background="@drawable/subtasks_list_background"

    android:orientation="vertical"
    tools:itemCount="4"
    tools:listitem="@layout/item_subtask"

    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginEnd="8dp"
    app:layout_constraintTop_toBottomOf="@id/addNoteLayout"
    android:layout_marginTop="16dp"/>


<com.google.android.material.button.MaterialButton
    android:id="@+id/addASubtask"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:text="@string/addSubtask"
    android:textAllCaps="false"
    android:textColor="@color/text_color"
    app:cornerRadius="10dp"
    app:icon="@drawable/ic_baseline_add_24"
    app:iconTint="@color/text_color"
    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"

    app:layout_constraintStart_toStartOf="@+id/subtasksRecyclerView"
    android:layout_marginStart="4dp"
    app:layout_constraintTop_toBottomOf="@id/subtasksRecyclerView" />

<androidx.constraintlayout.widget.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_end="8dp" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>