<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_mode_secondary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_mode_secondary"
        android:paddingBottom="16dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:liftOnScroll="true"

            android:translationZ="6dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"

                app:title="@string/addReminder"
                app:navigationIcon="@drawable/ic_back"
                app:menu="@menu/toolbar_menu_reminder_fragment"
                android:elevation="0dp"

                style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/curtain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curtain_background"

            android:elevation="6dp"

            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBar">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addTitleLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:startIconDrawable="@drawable/ic_label"


                android:hint="@string/title"
                android:textColorHint="@color/black"
                app:hintTextColor = "@color/black"

                app:endIconContentDescription="@string/clear"
                app:endIconMode="clear_text"

                app:boxBackgroundColor="@color/light_mode_main"

                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"

                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:singleLine="true"

                    android:fontFamily="@font/comfortaa"
                    android:inputType="textAutoComplete"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addNoteLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:startIconDrawable="@drawable/ic_note"

                android:hint="@string/note"
                android:textColorHint="@color/black"
                app:hintTextColor = "@color/black"

                app:endIconContentDescription="@string/clear"
                app:endIconMode="clear_text"

                app:boxBackgroundColor="@color/light_mode_main"

                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"

                app:layout_constraintEnd_toEndOf="@id/addTitleLayout"
                app:layout_constraintStart_toStartOf="@id/addTitleLayout"
                app:layout_constraintTop_toBottomOf="@id/addTitleLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/comfortaa"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/dateTimeDrawable"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintDimensionRatio="1:1"

            android:background="@drawable/circle"
            android:backgroundTint="@color/yellow"
            android:src="@drawable/ic_baseline_notifications_24"
            app:tint="@color/white"

            android:padding="10dp"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/addDateTime"
            app:layout_constraintBottom_toBottomOf="@id/addDateTime"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addDateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="6dp"

            android:layout_margin="16dp"

            android:background = "@drawable/add_reminder_button_background"

            android:fontFamily="@font/comfortaa"
            android:gravity="start"
            android:text="@string/dateTime"
            android:textAllCaps="false"
            android:textColor="@color/black"

            android:textSize="16sp"
            app:icon="@drawable/ic_drop_down"
            app:iconGravity="end"

            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dateTimeDrawable"
            app:layout_constraintTop_toBottomOf="@id/curtain" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/dateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="addDate, addTime"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"

            android:background = "@drawable/add_reminder_button_background"

            android:fontFamily="@font/comfortaa"
            android:gravity="start"
            android:text="31.11.2021"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"

            app:icon="@drawable/ic_calendar"
            app:iconGravity="end"
            app:iconTint="@color/black"

            app:layout_constraintEnd_toStartOf="@+id/addTime"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/dateTimeDrawable"
            app:layout_constraintTop_toBottomOf="@id/addDateTime"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"

            android:background = "@drawable/add_reminder_button_background"

            android:fontFamily="@font/comfortaa"
            android:gravity="start"
            android:text="12:00"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"

            app:icon="@drawable/ic_access_time"
            app:iconGravity="end"
            app:iconTint="@color/black"

            app:layout_constraintEnd_toEndOf="@id/addDateTime"
            app:layout_constraintStart_toEndOf="@+id/addDate"
            app:layout_constraintTop_toTopOf="@id/addDate" />

        <ImageView
            android:id="@+id/repeatDrawable"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintDimensionRatio="1:1"

            android:background="@drawable/circle"
            android:backgroundTint="@color/light_blue"
            android:src="@drawable/ic_repeat"
            app:tint="@color/white"

            android:padding="10dp"

            app:layout_constraintStart_toStartOf="@id/dateTimeDrawable"
            app:layout_constraintTop_toTopOf="@id/whenRepeat"
            app:layout_constraintBottom_toBottomOf="@id/whenRepeat"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/whenRepeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="6dp"

            android:background = "@drawable/add_reminder_button_background"

            android:fontFamily="@font/comfortaa"
            android:gravity="start"
            android:text="@string/repeat"
            android:textAllCaps="false"
            android:textColor="@color/black"

            android:textSize="16sp"
            app:icon="@drawable/ic_drop_down"
            app:iconGravity="end"
            app:iconTint="@color/black"

            app:layout_constraintEnd_toEndOf="@id/addDateTime"
            app:layout_constraintStart_toEndOf="@id/repeatDrawable"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/addDate"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="6dp"

            android:background = "@drawable/add_reminder_button_background"

            android:fontFamily="@font/comfortaa"
            android:gravity="start"
            android:text="@string/category"
            android:textAllCaps="false"
            android:textColor="@color/black"

            android:textSize="16sp"
            app:icon="@drawable/ic_drop_down"
            app:iconGravity="end"
            app:iconTint="@color/black"

            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="@id/whenRepeat"
            app:layout_constraintStart_toEndOf="@id/categoryDrawable"
            app:layout_constraintTop_toBottomOf="@id/whenRepeat"/>

        <ImageView
            android:id="@+id/categoryDrawable"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintDimensionRatio="1:1"

            android:background="@drawable/circle"
            android:backgroundTint="@color/grey"
            android:src="@drawable/ic_category_inbox"
            app:tint="@color/white"

            android:padding="10dp"

            app:layout_constraintStart_toStartOf="@id/repeatDrawable"
            app:layout_constraintTop_toTopOf="@id/selectCategory"
            app:layout_constraintBottom_toBottomOf="@id/selectCategory"/>

        <ImageView
            android:id="@+id/priorityDrawable"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintDimensionRatio="1:1"

            android:background="@drawable/circle"
            android:backgroundTint="@color/pinch"
            android:src="@drawable/ic_priority"
            app:tint="@color/white"

            android:padding="10dp"

            app:layout_constraintStart_toStartOf="@id/categoryDrawable"
            app:layout_constraintTop_toTopOf="@id/selectPriority"
            app:layout_constraintBottom_toBottomOf="@id/selectPriority"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="6dp"

            android:background = "@drawable/add_reminder_button_background"

            android:fontFamily="@font/comfortaa"
            android:gravity="start"
            android:text="@string/priorityLevel"
            android:textAllCaps="false"
            android:textColor="@color/black"

            android:textSize="16sp"
            app:icon="@drawable/ic_drop_down"
            app:iconGravity="end"

            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="@id/selectCategory"
            app:layout_constraintStart_toEndOf="@id/priorityDrawable"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/selectCategory"
            android:layout_marginTop="16dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>